--- a/index23.html
+++ b/index23.html
@@ -33,7 +33,7 @@
     <!-- section hero -->
     <section class="section section-hero">
         <div class="container">
-            <h1 class="hero-title">Ефективні рішення <br>
+            <h1 class="hero-title">HTML + CSS = твій перший крок у веб-дизайні <br>
                 вашого бізнесу
             </h1>
             <button class="button" type="button">Замовити послугу</button>
